bug fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,7 @@ main {
     height: 100%;
     left: 0;
     top: 0;
+    z-index: 999;
     background-color: rgba(0, 0, 0, 0.7);
 }
 
